CLAUDE.md: float/double concat lands, and the operand clobber it uncovered
Replaces the attempted-and-reverted card with the working design, the measured
cost table (+3,080 B against +53,624 for the baked route, and zero bake-stubs
naming the formatters), and the two hypotheses of mine that measurement refuted.

Adds a separate card for the latent defect the arc found and did NOT fix: an
operand live across a Magic.call2 intrinsic comes back clobbered. The
bracket-with-literal-appends discriminator is recorded, because until it was run
the symptom was indistinguishable from a broken formatter.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01KVDqs7fmNLpQ6fgp39XEZF